Fixing card alignment

--- a/src/assets/styles/components/card/card.scss
+++ b/src/assets/styles/components/card/card.scss
@@ -5,7 +5,7 @@
 .card {
   box-shadow: $DP4;
   min-height: 20rem;
-  width: 30rem;
+  width: 27.5rem;
   margin-bottom: 1.6rem;
 }
 
@@ -32,5 +32,6 @@
 --------------------------------------- */
 
 .card--centered {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
